--- a/OpticalMappingParser.Core/OpticalMappingParser.Core.csproj
+++ b/OpticalMappingParser.Core/OpticalMappingParser.Core.csproj
@@ -42,11 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Implementation\DifficultAreaIdentifier.cs" />
-    <Compile Include="Interfaces\IOpticalMappingParser.cs" />
+    <Compile Include="Interfaces\IDifficultAreaIdentifier.cs" />
     <Compile Include="Models\DifficultAreaResult.cs" />
     <Compile Include="Models\SequenceLength.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
