--- a/OpticalMappingParser.Core/OpticalMappingParser.Core.csproj
+++ b/OpticalMappingParser.Core/OpticalMappingParser.Core.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Implementation\DifficultAreaIdentifier.cs" />
     <Compile Include="Interfaces\IDifficultAreaIdentifier.cs" />
     <Compile Include="Models\DifficultAreaResult.cs" />
-    <Compile Include="Models\SequenceLength.cs" />
+    <Compile Include="Models\DifficultAreaType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
